--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
   <div class="row">
     <div class="col-md-4" id="usertally">0</div>
     <div class="col-md-4" height="auto">
-      <button id="rock">Rock</button>
+      <button id="rock" alt="rock"></button>
       <br />
-      <button id="paper">Paper</button>
-      <button id="scissors">Scissors</button>
+      <button id="paper" alt="Paper"></button>
+      <button id="scissors" alt="scissors"></button>
       <button id="clearme">Reset</button>
       <div  id='thing'>
       </div>
