messed around with buttons

--- a/index.html
+++ b/index.html
@@ -21,17 +21,21 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-md-4" id="usertally">0</div>
+    <div class="col-md-4">
+      <h1 id="usertally">0</h1>
+    </div>
     <div class="col-md-4" height="auto">
       <button id="rock" alt="rock"></button>
-      <br />
       <button id="paper" alt="Paper"></button>
       <button id="scissors" alt="scissors"></button>
       <button id="clearme">Reset</button>
       <div  id='thing'>
       </div>
     </div>
-    <div class="col-md-4" id="comptally">0</div>
+    <div class="col-md-4">
+      <h1 id="comptally">0</h1>
+      <h3 id="compChoice"></h1>
+    </div>
   </div>
 </div>
 
